# RAG_pipelines

./: .gitignore  LICENSE  README.md
fda_rag_extraction/: .gitignore  README.md  pyproject.toml  requirements.txt
fda_rag_extraction/scripts/: combine_json_to_jsonl.py  fda_watcher.py  json_split_and_clean.py  scheduler.py
pdf_extraction/: .gitignore  README.md  colab_pipeline.ipynb  combine_json_to_jsonl.py  pdf_marker_extraction.py  pubmed_enrichment.py  pyproject.toml  requirements.txt
